[package]
name = "indexpage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.10.1"
